# sqliteServer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  SPIFFS_UPLOAD.md  format_allman.py  partitions.csv  partitions_4MB.csv  platformio.ini  sdkconfig.defaults  sdkconfig.t8s3.old  sdkconfig.ttgo-t8  upload_spiffs.py
components/db_psram/: CMakeLists.txt  db_psram.c  db_psram.h
components/http_file_server/: http_file_server.c  http_file_server.h
components/main/: CMakeLists.txt  main.c
components/sdcard/: CMakeLists.txt  sdcard.c  sdcard.h
components/sql_api/: CMakeLists.txt  sql_api.c  sql_api.h
components/tcp_sqlite_server/: CMakeLists.txt  tcp_sqlite_server.c  tcp_sqlite_server.h
components/telnet_sqlite_console/: CMakeLists.txt  telnet_sqlite_console.c  telnet_sqlite_console.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
data/: index.html
documents/: protocol.md
include/: wifiCredentials_example.ini
obsolite/http_file_server/: CMakeLists.txt  http_file_server.c  http_file_server.h
obsolite/sql_api/: CMakeLists.txt  sql_api.c  sql_api.h
obsolite/wifi_manager/: wifi_manager.c  wifi_manager.h
scripts/: LITTLEFS_UPLOAD.md  createTestTables.py  format_allman.py  testServer.py  upload_littlefs.py  upload_web_files.py
src/: main.c
src/main/: CMakeLists.txt  main.c
